# dde_sample

./: .gitignore  CMakeLists.txt  CMakeSettings.json
DDECli/: CMakeLists.txt  DDECldlg.cpp  DDECldlg.h  DDECli.cpp  DDECli.h  myclient.cpp  myclient.h  myconv.cpp  myconv.h  stdafx.h
DDEServ/: CMakeLists.txt  DDEServ.cpp  DDEServ.h  DDESvvw.cpp  DDESvvw.h  mainfrm.cpp  mainfrm.h  myserv.cpp  myserv.h  stdafx.h
StdDDE/: CMakeLists.txt  stdafx.h  stddde.cpp  stddde.h
